// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with downloadUrl 1`] = `
<a
  class="button"
  download="/test.jpg"
  href="/test.jpg"
>
  <span
    aria-label="su-download"
    class="icon su-download"
  />
  Download
</a>
`;

exports[`Render with onClick 1`] = `
<a
  class="button"
>
  <span
    aria-label="su-download"
    class="icon su-download"
  />
  Download
</a>
`;
